fixed width layout bug on articles

--- a/style.css
+++ b/style.css
@@ -160,8 +160,7 @@ svg {
 }
 
 .header__container--wide {
-  --max-width: 1440px;
-  max-width: var(--max-width);
+  max-width: 1440px;
 }
 
 .body__footer {
@@ -797,8 +796,7 @@ svg {
 }
 
 .footer__container--wide {
-  --max-width: 1440px;
-  max-width: var(--max-width);
+  max-width: 1440px;
 }
 
 .link-row {
@@ -829,17 +827,18 @@ svg {
 /* Article */
 
 .article-wrapper {
-  --max-width: 1440px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: var(--max-width);
+  max-width: 1440px;
+  width: 100%;
   padding: 1rem;
 }
 
 .article__nav-container {
   grid-area: article__nav-container;
   display: flex;
+  width: 100%;
 }
 
 .article__nav {
